[gd_scene load_steps=16 format=2]

[ext_resource path="res://Start.gd" type="Script" id=1]
[ext_resource path="res://z-jh74-81-jhu-B6C4NJ_7-2dG_8dhJ_d-541-fjuBGT_s-5-зеленый-фон.jpg" type="Texture" id=2]
[ext_resource path="res://Montserrat-ExtraBold (1).ttf" type="DynamicFontData" id=3]
[ext_resource path="res://tiles.tres" type="TileSet" id=4]
[ext_resource path="res://maxresdefault.jpg" type="Texture" id=5]
[ext_resource path="res://35c35dd5efdcc17485bc011ef29483e5.jpg" type="Texture" id=6]
[ext_resource path="res://s1200.webp" type="Texture" id=7]
[ext_resource path="res://9336.jpg" type="Texture" id=8]
[ext_resource path="res://d6199852c18c0da6f23a5ef99d2ebb7a--d-texture-paint-texture.jpg" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 638.834, 359.56 )
z_index = -2
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 1, 0, 327684, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 3, 0, 393235, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 3, 0, 458771, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 2, 0, 524299, 2, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 4, 0, 589824, 4, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 4, 0, 589831, 4, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0 )

[node name="Button101" type="Button" parent="."]
margin_left = 61.6702
margin_top = 190.0
margin_right = 502.67
margin_bottom = 314.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button101"]
margin_right = 442.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.14902, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button102" type="Button" parent="."]
margin_left = 60.0
margin_top = 340.0
margin_right = 501.0
margin_bottom = 464.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button102"]
margin_left = 1.67
margin_right = 443.67
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.709804, 0, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button103" type="Button" parent="."]
margin_left = 60.0
margin_top = 490.0
margin_right = 278.0
margin_bottom = 614.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Button103"]
margin_left = 2.0
margin_right = 229.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -0.647034
margin_right = 1284.35
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.00392157, 0, 0.32549, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
text = "                DIcraft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Label"]
position = Vector2( 508.064, 64.9141 )
scale = Vector2( 0.15, 0.15 )
z_index = -1
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="Label"]
position = Vector2( 599.212, 64.7674 )
scale = Vector2( 0.126939, 0.122503 )
z_index = -1
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="Label"]
position = Vector2( 693.155, 64.6668 )
scale = Vector2( 0.0923863, 0.0877388 )
z_index = -1
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="Label"]
position = Vector2( 789.97, 64.7354 )
scale = Vector2( 0.19489, 0.175381 )
z_index = -1
texture = ExtResource( 8 )

[node name="Pos_p" type="Position2D" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Pos_p"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Pos_p/Panel"]
texture = ExtResource( 5 )
centered = false

[node name="Label2" type="Label" parent="Pos_p/Panel"]
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Game version is 0.3.0 Alpha.
Game created by Maksim Spirin.
Thanks for playing;)
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1000" type="Button" parent="Pos_p/Panel"]
margin_left = 1219.0
margin_top = 2.0
margin_right = 1278.0
margin_bottom = 58.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pos_p/Panel/Button1000"]
margin_left = 7.37854
margin_top = -10.8043
margin_right = 67.3785
margin_bottom = 64.1957
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pos_u" type="Position2D" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Pos_u"]
margin_left = 468.823
margin_top = 315.556
margin_right = 822.823
margin_bottom = 486.556
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pos_u/Panel"]
margin_left = 0.751038
margin_right = 353.751
margin_bottom = 78.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "Are you sure you want to exit the game?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNO" type="Button" parent="Pos_u/Panel"]
margin_left = 21.0
margin_top = 121.0
margin_right = 86.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pos_u/Panel/ButtonNO"]
margin_left = 14.4243
margin_top = -3.32867
margin_right = 80.4243
margin_bottom = 27.6713
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "No"

[node name="ButtonYES" type="Button" parent="Pos_u/Panel"]
margin_left = 271.0
margin_top = 121.0
margin_right = 336.0
margin_bottom = 147.0

[node name="Label" type="Label" parent="Pos_u/Panel/ButtonYES"]
margin_left = 9.79132
margin_top = -3.32867
margin_right = 75.7913
margin_bottom = 27.6713
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button101" to="." method="_on_Button101_pressed"]
[connection signal="pressed" from="Button102" to="." method="_on_Button102_pressed"]
[connection signal="pressed" from="Button103" to="." method="_on_Button103_pressed"]
[connection signal="pressed" from="Pos_p/Panel/Button1000" to="." method="_on_Button1000_pressed"]
[connection signal="pressed" from="Pos_u/Panel/ButtonNO" to="." method="_on_ButtonNO_pressed"]
[connection signal="pressed" from="Pos_u/Panel/ButtonYES" to="." method="_on_ButtonYES_pressed"]
